--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
     <meta name="theme-color" content="#31d53d" />
   </head>
   <body>
-    <capacitor-welcome></capacitor-welcome>
+    <button type="button" x-init="" x-on:click="$toast('Hello, world!')" class="button">Show Toast</button>
 
-    <script src="./js/capacitor-welcome.js" type="module"></script>
+    <script src="./js/app.js" type="module"></script>
   </body>
 </html>
